--- a/login/build.gradle
+++ b/login/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.voleti.home'
+    namespace 'com.voleti.login'
     compileSdk 33
 
     defaultConfig {
@@ -13,7 +13,6 @@ android {
         targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -36,8 +35,10 @@ android {
 }
 
 dependencies {
+    implementation(project(':token_manager'))
     implementation project(':navigation')
-    implementation project(':token_manager')
+
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
