--- a/token_manager/build.gradle
+++ b/token_manager/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
-    namespace 'com.voleti.home'
+    namespace 'com.voleti.token_manager'
     compileSdk 33
 
     defaultConfig {
@@ -29,22 +28,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-        dataBinding true
-    }
 }
 
 dependencies {
-    implementation project(':navigation')
-    implementation project(':token_manager')
-    implementation 'androidx.core:core-ktx:1.10.1'
+
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
